--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>ARApp</title>
 
   <base href="/" />
 
@@ -15,7 +15,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/assets/icon/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/icon-144x144.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
